# fitsdb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fitsdb/: __init__.py  api.py  core.py  db.py  main.py
tests/: test_main.py
